--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.53.0",
         "react-i18next": "^12.1.5",
+        "react-icons": "^5.3.0",
         "react-images-uploading": "^3.1.7",
         "react-perfect-scrollbar": "^1.5.8",
         "react-popper": "^2.3.0",
