--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-i18next": "^12.1.5",
         "react-icons": "^5.3.0",
         "react-images-uploading": "^3.1.7",
+        "react-loading": "^2.0.3",
         "react-perfect-scrollbar": "^1.5.8",
         "react-popper": "^2.3.0",
         "react-quill": "^2.0.0",
