--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "highlight.js": "^11.7.0",
         "i18next": "^22.4.10",
         "mantine-datatable": "^1.7.35",
+        "moment": "^2.30.1",
         "next": "^14.2.15",
         "ni18n": "^1.0.5",
         "react": "18.2.0",
