--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
         "@x1mrdonut1x/nouislider-react": "^3.4.3",
+        "antd": "^5.21.4",
         "apexcharts": "^3.37.1",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
