--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@x1mrdonut1x/nouislider-react": "^3.4.3",
         "antd": "^5.21.4",
         "apexcharts": "^3.37.1",
+        "chart.js": "^4.4.5",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
         "easymde": "^2.18.0",
@@ -44,6 +45,7 @@
         "react": "18.2.0",
         "react-animate-height": "^3.1.0",
         "react-apexcharts": "^1.4.0",
+        "react-chartjs-2": "^5.2.0",
         "react-click-away-listener": "^2.2.2",
         "react-copy-to-clipboard": "^5.1.0",
         "react-countup": "^6.4.1",
